refactor(CrewAttendanceStatus): 한 크루의 출석 상태 객체로 포장